<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cherondesigns.cheronapp.Fragment.MoreFragment"
    android:padding="10dp"
    android:background="@mipmap/app_background"
    >

    <TextView
        android:id="@+id/choose_language"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/choose_language"
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/restore_default"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/restore_default_setting"
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/app_version"
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>
